// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView rendering renders expected elements 1`] = `
<Context.Provider
  value={
    {
      "focused": [
        "child-0",
      ],
      "onSelect": undefined,
      "selected": undefined,
      "setFocused": [MockFunction],
    }
  }
>
  <Context.Provider
    value={
      {
        "level": 0,
        "padding": 0,
        "parentPath": [],
      }
    }
  >
    <ul
      className="TreeView TreeView--sm"
      role="tree"
    >
      <div
        id="child-0"
      />
    </ul>
  </Context.Provider>
</Context.Provider>
`;

exports[`TreeView rendering renders expected elements when optional properties are set 1`] = `
<Context.Provider
  value={
    {
      "focused": [
        "test-id",
      ],
      "onSelect": undefined,
      "selected": [
        "test-id",
      ],
      "setFocused": [MockFunction],
    }
  }
>
  <Context.Provider
    value={
      {
        "level": 0,
        "padding": 0,
        "parentPath": [],
      }
    }
  >
    <ul
      className="TreeView TreeView--xs TestClass"
      role="tree"
    >
      <div
        id="child-0"
      />
    </ul>
  </Context.Provider>
</Context.Provider>
`;
